package context

import (
	"context"
	"time"

	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"github.com/foxcool/greedy-eye/internal/api/models"
)

// SessionManager manages user conversation sessions
type SessionManager struct {
	log *zap.Logger
}

// NewSessionManager creates a new SessionManager instance
func NewSessionManager(log *zap.Logger) *SessionManager {
	return &SessionManager{
		log: log.Named("session_manager"),
	}
}

// SessionConfig holds session configuration
type SessionConfig struct {
	DefaultTimeout   time.Duration
	MaxHistoryLength int
	StorageType      string // "memory", "redis"
	RedisURL         string
}

// GetSession retrieves user session context
func (sm *SessionManager) GetSession(ctx context.Context, telegramID string) (*models.SessionContext, error) {
	sm.log.Info("GetSession called",
		zap.String("telegram_id", telegramID))

	return nil, status.Errorf(codes.Unimplemented, "GetSession not implemented")
}

// CreateSession creates new session context for user
func (sm *SessionManager) CreateSession(ctx context.Context, telegramID string, operation string) (*models.SessionContext, error) {
	sm.log.Info("CreateSession called",
		zap.String("telegram_id", telegramID),
		zap.String("operation", operation))

	return nil, status.Errorf(codes.Unimplemented, "CreateSession not implemented")
}

// UpdateSession updates existing session context
func (sm *SessionManager) UpdateSession(ctx context.Context, session *models.SessionContext) error {
	sm.log.Info("UpdateSession called",
		zap.String("telegram_id", session.TelegramId),
		zap.String("current_operation", session.CurrentOperation),
		zap.String("state", session.State))

	return status.Errorf(codes.Unimplemented, "UpdateSession not implemented")
}

// DeleteSession removes session context
func (sm *SessionManager) DeleteSession(ctx context.Context, telegramID string) error {
	sm.log.Info("DeleteSession called",
		zap.String("telegram_id", telegramID))

	return status.Errorf(codes.Unimplemented, "DeleteSession not implemented")
}

// IsSessionExpired checks if session has expired
func (sm *SessionManager) IsSessionExpired(session *models.SessionContext) bool {
	sm.log.Debug("IsSessionExpired called",
		zap.String("telegram_id", session.TelegramId))

	// Always return false for stub implementation
	return false
}

// CleanupExpiredSessions removes expired sessions
func (sm *SessionManager) CleanupExpiredSessions(ctx context.Context) (int, error) {
	sm.log.Info("CleanupExpiredSessions called")

	return 0, status.Errorf(codes.Unimplemented, "CleanupExpiredSessions not implemented")
}

// AddToHistory adds message to conversation history
func (sm *SessionManager) AddToHistory(session *models.SessionContext, message string, maxLength int) {
	sm.log.Debug("AddToHistory called",
		zap.String("telegram_id", session.TelegramId),
		zap.Int("current_history_length", len(session.ConversationHistory)),
		zap.Int("max_length", maxLength))

	// Stub implementation - no actual history modification
}

// GetContextData retrieves specific context data
func (sm *SessionManager) GetContextData(session *models.SessionContext, key string) (string, bool) {
	sm.log.Debug("GetContextData called",
		zap.String("telegram_id", session.TelegramId),
		zap.String("key", key))

	// Always return empty for stub implementation
	return "", false
}

// SetContextData sets specific context data
func (sm *SessionManager) SetContextData(session *models.SessionContext, key, value string) {
	sm.log.Debug("SetContextData called",
		zap.String("telegram_id", session.TelegramId),
		zap.String("key", key),
		zap.String("value", value))

	// Stub implementation - no actual data modification
}