package handlers

import (
	"context"

	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"github.com/foxcool/greedy-eye/internal/api/models"
)

// MessageHandler handles text message processing
type MessageHandler struct {
	log *zap.Logger
}

// NewMessageHandler creates a new MessageHandler instance
func NewMessageHandler(log *zap.Logger) *MessageHandler {
	return &MessageHandler{
		log: log.Named("message_handler"),
	}
}

// MessageRequest represents a message processing request
type MessageRequest struct {
	TelegramID string
	Message    *models.TelegramMessage
	Context    *models.SessionContext
}

// MessageResponse represents a message processing response
type MessageResponse struct {
	Response      *models.TelegramResponse
	UpdateSession bool
	NewContext    *models.SessionContext
}

// HandleMessage processes text messages with NLP
func (h *MessageHandler) HandleMessage(ctx context.Context, req *MessageRequest) (*MessageResponse, error) {
	h.log.Info("HandleMessage called",
		zap.String("telegram_id", req.TelegramID),
		zap.String("message_type", req.Message.Type.String()),
		zap.String("content_length", func() string {
			if len(req.Message.Content) > 50 {
				return "long"
			} else if len(req.Message.Content) > 0 {
				return "short"
			}
			return "empty"
		}()))

	return nil, status.Errorf(codes.Unimplemented, "HandleMessage not implemented")
}

// ParseIntent extracts user intent from natural language text
func (h *MessageHandler) ParseIntent(ctx context.Context, text string, language string) (*Intent, error) {
	h.log.Info("ParseIntent called",
		zap.String("text_length", func() string {
			if len(text) > 50 {
				return "long"
			} else if len(text) > 0 {
				return "short"
			}
			return "empty"
		}()),
		zap.String("language", language))

	return nil, status.Errorf(codes.Unimplemented, "ParseIntent not implemented")
}

// ExtractEntities extracts entities (assets, amounts, dates) from text
func (h *MessageHandler) ExtractEntities(ctx context.Context, text string, language string) ([]*Entity, error) {
	h.log.Info("ExtractEntities called",
		zap.String("text_length", func() string {
			if len(text) > 50 {
				return "long"
			} else if len(text) > 0 {
				return "short"
			}
			return "empty"
		}()),
		zap.String("language", language))

	return nil, status.Errorf(codes.Unimplemented, "ExtractEntities not implemented")
}

// Intent represents parsed user intention
type Intent struct {
	Type       string            // "portfolio", "balance", "price", "trade", etc.
	Confidence float64           // 0.0-1.0
	Entities   []*Entity         // Extracted entities
	Context    map[string]string // Additional context
}

// Entity represents extracted entity from text
type Entity struct {
	Type  string  // "asset", "amount", "date", "portfolio"
	Value string  // Entity value
	Score float64 // Extraction confidence
}